--- a/spec/src/main/asciidoc/jakarta.xml.soap.adoc
+++ b/spec/src/main/asciidoc/jakarta.xml.soap.adoc
@@ -1,4 +1,4 @@
 == Introduction
 
-Jakarta SOAP with Attachments defines API enabling developers to produce
-and consume messages conforming to the SOAP 1.1, SOAP 1.2 and SOAP Attachments Feature.
+Jakarta SOAP with Attachments defines an API enabling developers to produce
+and consume messages conforming to the SOAP 1.1, SOAP 1.2, and SOAP Attachments Feature.
