--- a/spec/src/main/asciidoc/soap-spec.adoc
+++ b/spec/src/main/asciidoc/soap-spec.adoc
@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2017, 2019 Contributors to the Eclipse Foundation
+// Copyright (c) 2017, 2020 Contributors to the Eclipse Foundation
 //
 
 = Jakarta SOAP with Attachments
@@ -25,4 +25,4 @@ include::license-efsl.adoc[]
 
 // == Jakarta SOAP with Attachments
 :sectnums:
-include::jakarta.xml.soap.adoc[]
+include::soap.adoc[]
