--- a/spec/src/main/asciidoc/soap.adoc
+++ b/spec/src/main/asciidoc/soap.adoc
@@ -1,3 +1,7 @@
+//
+// Copyright (c) 2017, 2020 Contributors to the Eclipse Foundation
+//
+
 == Introduction
 
 Jakarta SOAP with Attachments defines an API enabling developers to produce
