--- a/spec/src/main/asciidoc/soap-spec.adoc
+++ b/spec/src/main/asciidoc/soap-spec.adoc
@@ -26,3 +26,4 @@ include::license-efsl.adoc[]
 // == Jakarta SOAP with Attachments
 :sectnums:
 include::soap.adoc[]
+include::SOAPAttachments.adoc[]
