--- a/spec/src/main/asciidoc/SOAPAttachments.adoc
+++ b/spec/src/main/asciidoc/SOAPAttachments.adoc
@@ -122,7 +122,7 @@ image:soapatt-8.png[image]
 
 Abstract
 
-Jakarta SOAP with Attachments defines API enabling developers to produce 
+Jakarta SOAP with Attachments defines an API enabling developers to produce 
 and consume messages conforming to the SOAP 1.1, SOAP 1.2 and SOAP Attachments Feature.
 
 In the interest of backward compatibility, SAAJ
